--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="default_stocks_microsoft">MSFT</string>
     <string name="default_stocks_facebook">FB</string>
 
+    <string name="pref_last_refresh_key">pref_last_refresh_key</string>
+
 
     <string name="action_change_units">@string/pref_display_mode_key</string>
 
@@ -32,6 +34,8 @@
     <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
     <string name="toast_stock_name_not_found">Sorry, stock name not found.</string>
+    <string name="last_refresh">last refresh:\u0020</string>
+    <string name="never">never</string>
 
 
 </resources>
