--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/tools">
     <string name="app_name">Stock Hawk</string>
 
     <string name="pref_stocks_initialized_key" translatable="false">initialized</string>
@@ -23,20 +23,20 @@
     <string name="action_change_units" translatable="false">@string/pref_display_mode_key</string>
 
 
-    <string name="dialog_title">Add Stock</string>
+    <string name="dialog_title" translatable="false">Add Stock</string>
     <string name="dialog_hint">Symbol (e.g. GOOG)</string>
     <string name="dialog_cancel">Cancel</string>
-    <string name="dialog_add">Add</string>
+    <string name="dialog_add" translatable="false">Add</string>
 
     <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
     <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
 
-    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
+    <string name="toast_stock_added_no_connectivity">Symbol <xliff:g id="symbol">%s</xliff:g> added. Will refresh when network available.</string>
     <string name="toast_no_connectivity">Will refresh when network available.</string>
     <string name="toast_stock_name_not_found">Sorry, stock name not found.</string>
     <string name="last_refresh">last refresh:\u0020</string>
     <string name="never">never</string>
-    <string name="stock_graph_title">%s - Position history</string>
+    <string name="stock_graph_title"><xliff:g id="symbol">%s</xliff:g> - Position history</string>
     <string name="stock_graph_label">last 2 years</string>
     <string name="historical_position">Historical position</string>
 
